--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Find new films to watch"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <title>Movies-explorer</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Find new films to watch</noscript>
     <div id="root"></div>
   </body>
 </html>
